--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-fastapi==0.115.12
-uvicorn==0.34.3
-numpy==2.2.6
-faiss-cpu==1.11.0
-python-dotenv==1.1.0
-slowapi==0.1.9
-pydantic==2.11.5
-requests==2.32.3
-transformers==4.52.4
-torch>=1.9.0
-sentence-transformers
+fastapi
+uvicorn
+python-dotenv
+slowapi
+numpy
+faiss-cpu
+torch
+transformers
+requests
+sentence-transformers 
