--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-HF_TOKEN=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
+APP_ADMIN_USERNAME="your_admin_username"
+APP_ADMIN_PASSWORD="your_strong_password"
+
+HF_INFERENCE_API_KEY="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"
