--- a/.env
+++ b/.env
@@ -1,4 +1,13 @@
 APP_ADMIN_USERNAME="your_admin_username"
 APP_ADMIN_PASSWORD="your_strong_password"
 
-HF_INFERENCE_API_KEY="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"
+HF_INFERENCE_API_KEY="your_hf_api_key_here"
+# You can override these if you use different models or private endpoints
+HF_EMBEDDING_ENDPOINT_URL="https://api-inference.huggingface.co/models/sentence-transformers/all-MiniLM-L6-v2"
+HF_SUMMARIZATION_ENDPOINT_URL="https://api-inference.huggingface.co/models/facebook/bart-large-cnn"
+
+FAISS_INDEX_PATH="papers.index"
+PAPERS_CONTENT_PATH="papers_content.json"
+
+# PORT is usually set by the deployment platform (like Render) or defaults in app.py for local dev
+# PORT=8000
