--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-APP_ADMIN_USERNAME="your_admin_username"
-APP_ADMIN_PASSWORD="your_strong_password"
+APP_ADMIN_USERNAME="admin1@admin"
+APP_ADMIN_PASSWORD="12345"
 
 HF_INFERENCE_API_KEY="your_hf_api_key_here"
 # You can override these if you use different models or private endpoints
